--- a/css/fotos.css
+++ b/css/fotos.css
@@ -35,7 +35,7 @@ ul#album-fotos li:hover span{
 	opacity:1;
 }
 ul#album-fotos li#foto01{
-	background: url('../_imagens/galeria-01.jpg') no-repeat;
+	background: url('../imagens/galeria-01.jpg') no-repeat;
 	background-position:50% 50%;
 	background-size: 400px 400px;
 	background-color:#ffffff;
@@ -45,7 +45,7 @@ ul#album-fotos li#foto01:hover{
 	background-size: 200px 200px;
 }
 ul#album-fotos li#foto02{
-	background: url('../_imagens/galeria-02.jpg') no-repeat;
+	background: url('../imagens/galeria-02.jpg') no-repeat;
 	background-position:50% 50%;
 	background-size: 400px 400px;
 	background-color:#ffffff;
@@ -55,7 +55,7 @@ ul#album-fotos li#foto02:hover{
 	background-size: 200px 200px;
 }
 ul#album-fotos li#foto03{
-	background: url('../_imagens/galeria-03.jpg') no-repeat;
+	background: url('../imagens/galeria-03.jpg') no-repeat;
 	background-position:50% 50%;
 	background-size: 400px 400px;
 	background-color:#ffffff;
@@ -65,7 +65,7 @@ ul#album-fotos li#foto03:hover{
 	background-size: 200px 200px;
 }
 ul#album-fotos li#foto04{
-	background: url('../_imagens/galeria-04.jpg') no-repeat;
+	background: url('../imagens/galeria-04.jpg') no-repeat;
 	background-position:50% 50%;
 	background-size: 400px 400px;
 	background-color:#ffffff;
@@ -75,7 +75,7 @@ ul#album-fotos li#foto04:hover{
 	background-size: 200px 200px;
 }
 ul#album-fotos li#foto05{
-	background: url('../_imagens/galeria-05.jpg') no-repeat;
+	background: url('../imagens/galeria-05.jpg') no-repeat;
 	background-position:50% 50%;
 	background-size: 400px 400px;
 	background-color:#ffffff;
@@ -85,7 +85,7 @@ ul#album-fotos li#foto05:hover{
 	background-size: 200px 200px;
 }
 ul#album-fotos li#foto06{
-	background: url('../_imagens/galeria-06.jpg') no-repeat;
+	background: url('../imagens/galeria-06.jpg') no-repeat;
 	background-position:50% 50%;
 	background-size: 400px 400px;
 	background-color:#ffffff;
