--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 @font-face{
 	font-family:'FonteLogo';
-	src: url('../_fonts/bubblegum-sans-regular.otf');
+	src: url('../fonts/bubblegum-sans-regular.otf');
 }
 @font-face{
 	font-family:'fontsgoogle';
-	src: url('../_fonts/Acme-Regular.ttf');
+	src: url('../fonts/Acme-Regular.ttf');
 }
 
 body{
@@ -39,7 +39,7 @@ a:hover {
 header#cabecalho{
 	border-bottom:1px #606060 solid;
 	height:150px;
-	background: url('../_imagens/glass-logo-peq.jpg')no-repeat -7px 80px;
+	background: url('../imagens/glass-logo-peq.jpg')no-repeat -7px 80px;
 
 	/*0px 800px*/
 }
